--- a/WWDCDownloadableLinkExtractor/WWDCDownloadableLinkExtractor/Base.lproj/MainMenu.xib
+++ b/WWDCDownloadableLinkExtractor/WWDCDownloadableLinkExtractor/Base.lproj/MainMenu.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6154.17" systemVersion="13D65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14E33b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6154.17"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -10,11 +11,12 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="RKSAppDelegate">
             <connections>
                 <outlet property="getLinksButton" destination="pza-0r-IrX" id="EqB-qu-uz8"/>
                 <outlet property="linksListTextView" destination="w9x-kh-p14" id="Z9C-cQ-sui"/>
+                <outlet property="loadingIndicator" destination="Xrw-os-EJM" id="PIJ-N9-Wcc"/>
                 <outlet property="urlTextField" destination="mO3-15-DS3" id="Q85-sX-cme"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
@@ -178,7 +180,7 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="335" y="390" width="480" height="360"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1280" height="778"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1280" height="777"/>
             <view key="contentView" id="EiT-Mj-1SZ">
                 <rect key="frame" x="0.0" y="0.0" width="480" height="360"/>
                 <autoresizingMask key="autoresizingMask"/>
@@ -205,7 +207,7 @@
                         </connections>
                     </button>
                     <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yxx-da-xPJ">
-                        <rect key="frame" x="20" y="20" width="440" height="290"/>
+                        <rect key="frame" x="20" y="20" width="440" height="281"/>
                         <clipView key="contentView" id="mZ4-wt-206">
                             <rect key="frame" x="1" y="1" width="438" height="288"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -214,10 +216,10 @@
                                     <rect key="frame" x="0.0" y="0.0" width="438" height="288"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="438" height="288"/>
+                                    <size key="minSize" width="438" height="279"/>
                                     <size key="maxSize" width="463" height="10000000"/>
                                     <color key="insertionPointColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                    <size key="minSize" width="438" height="288"/>
+                                    <size key="minSize" width="438" height="279"/>
                                     <size key="maxSize" width="463" height="10000000"/>
                                 </textView>
                             </subviews>
@@ -232,15 +234,21 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
+                    <progressIndicator maxValue="100" indeterminate="YES" controlSize="small" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="Xrw-os-EJM">
+                        <rect key="frame" x="20" y="303" width="440" height="12"/>
+                    </progressIndicator>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="Yxx-da-xPJ" firstAttribute="top" secondItem="Xrw-os-EJM" secondAttribute="bottom" constant="2" id="Dqa-zO-GOX"/>
                     <constraint firstAttribute="bottom" secondItem="Yxx-da-xPJ" secondAttribute="bottom" constant="20" symbolic="YES" id="GBB-4b-lec"/>
                     <constraint firstItem="mO3-15-DS3" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" symbolic="YES" id="NpZ-2n-Iw7"/>
                     <constraint firstAttribute="trailing" secondItem="pza-0r-IrX" secondAttribute="trailing" constant="20" symbolic="YES" id="OUJ-2P-NhH"/>
-                    <constraint firstItem="Yxx-da-xPJ" firstAttribute="top" secondItem="mO3-15-DS3" secondAttribute="bottom" constant="8" symbolic="YES" id="V6K-u7-Ikn"/>
                     <constraint firstItem="Yxx-da-xPJ" firstAttribute="leading" secondItem="mO3-15-DS3" secondAttribute="leading" id="Wpb-s7-S3q"/>
                     <constraint firstItem="mO3-15-DS3" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" symbolic="YES" id="XGe-Ha-GAK"/>
+                    <constraint firstItem="Xrw-os-EJM" firstAttribute="top" secondItem="pza-0r-IrX" secondAttribute="bottom" constant="2" id="hEy-uf-cWd"/>
+                    <constraint firstItem="Xrw-os-EJM" firstAttribute="leading" secondItem="Yxx-da-xPJ" secondAttribute="leading" id="lEz-zx-8vR"/>
                     <constraint firstItem="pza-0r-IrX" firstAttribute="leading" secondItem="mO3-15-DS3" secondAttribute="trailing" constant="8" symbolic="YES" id="n9g-lR-NhW"/>
+                    <constraint firstItem="Xrw-os-EJM" firstAttribute="trailing" secondItem="Yxx-da-xPJ" secondAttribute="trailing" id="ntv-dg-dlg"/>
                     <constraint firstItem="pza-0r-IrX" firstAttribute="baseline" secondItem="mO3-15-DS3" secondAttribute="baseline" id="soQ-zC-FcG"/>
                     <constraint firstItem="pza-0r-IrX" firstAttribute="trailing" secondItem="Yxx-da-xPJ" secondAttribute="trailing" id="vn9-1q-xfb"/>
                 </constraints>
